--- a/src/app/components/add-todo/add-todo.component.html
+++ b/src/app/components/add-todo/add-todo.component.html
@@ -1,1 +1,33 @@
-<p>add-todo works!</p>
+<div class="submit-form">
+    <div *ngIf="!submitted">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="name"
+          required
+          [(ngModel)]="todo.name"
+          name="name"
+        />
+      </div>
+  
+      <div class="form-group">
+        <label for="desc">Description</label>
+        <input
+          class="form-control"
+          id="desc"
+          required
+          [(ngModel)]="todo.desc"
+          name="desc"
+        />
+      </div>
+  
+      <button (click)="saveTodo()" class="btn btn-success">Submit</button>
+    </div>
+  
+    <div *ngIf="submitted">
+      <h4>You submitted successfully!</h4>
+      <button class="btn btn-success" (click)="newTodo()">Add</button>
+    </div>
+  </div>
